--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ maintenance = { status = "actively-developed" }
 env_logger = "0.7"
 kankyo = "0.3"
 log = "0.4"
+serde = "1.0"
+serde_json = "1.0"
 serenity = "0.8"
 unicode-segmentation = "1.6"
 
